create coop insti finish

--- a/zplatform-member/src/test/resources/log4j.properties
+++ b/zplatform-member/src/test/resources/log4j.properties
@@ -28,4 +28,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d %5p (%c:%L) - %m%n
 
 # Spring Stuff
 log4j.logger.org.springframework=DEBUG
+log4j.logger.org.hibernate=debug
 
