修改log4j，修复产品列表不正确bug

--- a/zplatform-acc/src/main/resources/log4j.properties
+++ b/zplatform-acc/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@
 
 
 # Set root logger level to WARN and append to stdout
-log4j.logger.com.zlebank.zplatform.acc=DEBUG,stdout,accAppender
+log4j.logger.com.zlebank.zplatform.acc=INFO,stdout,accAppender
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -32,7 +32,7 @@ log4j.appender.accAppender.layout.ConversionPattern=[%d{yyyy/MM/dd HH:mm:ss,SSS}
 
 # OpenSymphony Stuff
 #log4j.logger.com.opensymphony=INFO
-#log4j.logger.org.apache.struts2=DEBUG
+#log4j.logger.org.apache.struts2=WARN
 
 # Spring Stuff
 log4j.logger.org.springframework=INFO
