--- a/zplatform-acc/src/test/resources/log4j.properties
+++ b/zplatform-acc/src/test/resources/log4j.properties
@@ -24,8 +24,8 @@ log4j.appender.stdout.layout.ConversionPattern=%d %5p (%c:%L) - %m%n
 
 # OpenSymphony Stuff
 #log4j.logger.com.opensymphony=INFO
-#log4j.logger.org.apache.struts2=DEBUG
+#log4j.logger.org.apache.struts2=INFO
 
 # Spring Stuff
-log4j.logger.org.springframework=DEBUG
+log4j.logger.org.springframework=WARN
 
