--- a/zplatform-member/src/test/resources/log4j.properties
+++ b/zplatform-member/src/test/resources/log4j.properties
@@ -24,9 +24,9 @@ log4j.appender.stdout.layout.ConversionPattern=%d %5p (%c:%L) - %m%n
 
 # OpenSymphony Stuff
 #log4j.logger.com.opensymphony=INFO
-#log4j.logger.org.apache.struts2=DEBUG
+#log4j.logger.org.apache.struts2=WARN
 
 # Spring Stuff
-log4j.logger.org.springframework=DEBUG
-log4j.logger.org.hibernate=debug
+log4j.logger.org.springframework=WARN
+log4j.logger.org.hibernate=WARN
 
