--- a/zplatform-specification/src/main/resources/log4j.properties
+++ b/zplatform-specification/src/main/resources/log4j.properties
@@ -32,7 +32,7 @@ log4j.appender.specificationAppender.layout.ConversionPattern=[%d{yyyy/MM/dd HH:
 
 # OpenSymphony Stuff
 #log4j.logger.com.opensymphony=INFO
-#log4j.logger.org.apache.struts2=DEBUG
+#log4j.logger.org.apache.struts2=WARN
 
 # Spring Stuff
 log4j.logger.org.springframework=INFO
