--- a/zplatform-member-api/pom.xml
+++ b/zplatform-member-api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.zlebank.zplatform</groupId>
 		<artifactId>zplatform-infranstructure-deploy</artifactId>
-		<version>1.2.0-SNAPSHOT</version>
+		<version>1.2.0</version>
 		<relativePath>../zplatform-infranstructure-deploy/pom.xml</relativePath>
 	</parent>
 	<artifactId>zplatform-member-api</artifactId>
