--- a/zplatform-member/pom.xml
+++ b/zplatform-member/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.zlebank.zplatform</groupId>
 		<artifactId>zplatform-infranstructure-deploy</artifactId>
-		<version>1.4.0-SNAPSHOT</version>
+		<version>1.4.0</version>
 		<relativePath>../zplatform-infranstructure-deploy/pom.xml</relativePath>
 	</parent>
 	<artifactId>zplatform-member</artifactId>
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>com.zlebank.zplatform</groupId>
 			<artifactId>zplatform-acc</artifactId>
-			<version>1.4.0-SNAPSHOT</version>
+			<version>1.4.0</version>
 		</dependency> 
 	</dependencies>
 </project>
