发布1.4.0之后合并截止至5月5日开发的1.5.0的代码

--- a/zplatform-acc/pom.xml
+++ b/zplatform-acc/pom.xml
@@ -43,6 +43,11 @@
 			<version>2.4</version>
 			<classifier>jdk15</classifier>
 		</dependency>
+		<dependency>
+			<groupId>com.zlebank.zplatform</groupId>
+			<artifactId>zplatform-commons-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
