--- a/zplatform-infranstructure-deploy/pom.xml
+++ b/zplatform-infranstructure-deploy/pom.xml
@@ -117,6 +117,12 @@
 				<version>4.11</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>com.zlebank.zplatform</groupId>
+				<artifactId>zplatform-commons-test</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
