--- a/zplatform-member/pom.xml
+++ b/zplatform-member/pom.xml
@@ -14,5 +14,10 @@
 			<artifactId>zplatform-acc</artifactId>
 			<version>1.5.0-SNAPSHOT</version>
 		</dependency> 
+		<dependency>
+			<groupId>com.zlebank.zplatform</groupId>
+			<artifactId>zplatform-commons-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
