--- a/zplatform-member/src/main/resources/member_exception_des.properties
+++ b/zplatform-member/src/main/resources/member_exception_des.properties
@@ -1,16 +1,17 @@
 #\u8d26\u6237\u6a21\u5757
-EMS020001=\u5408\u4f5c\u673a\u6784\u540d\u91cd\u590d
-EMS020003=\u751f\u6210\u5408\u4f5c\u673a\u6784\u79d8\u94a5\u53d1\u9001\u9519\u8bef
-EMS020002=\u751f\u6210\u5408\u4f5c\u673a\u6784\u53f7\u53d1\u751f\u9519\u8bef
-EMS020004=\u751f\u6210\u5408\u4f5c\u673a\u6784\u4e1a\u52a1\u8d26\u6237\u53d1\u751f\u9519\u8bef\uff0c\u539f\u56e0\:%1$s
-EMS020005=\u5408\u4f5c\u673a\u6784[%1s]\u4e0d\u5b58\u5728
+EMS020001=\u5408\u4F5C\u673A\u6784\u540D\u91CD\u590D
+EMS021001=\u83B7\u53D6\u4F1A\u5458\u53F7\u5E8F\u5217\u53D1\u751F\u9519\u8BEF
+EMS020003=\u751F\u6210\u5408\u4F5C\u673A\u6784\u79D8\u94A5\u53D1\u9001\u9519\u8BEF
+EMS020002=\u751F\u6210\u5408\u4F5C\u673A\u6784\u53F7\u53D1\u751F\u9519\u8BEF
+EMS020004=\u751F\u6210\u5408\u4F5C\u673A\u6784\u4E1A\u52A1\u8D26\u6237\u53D1\u751F\u9519\u8BEF\uFF0C\u539F\u56E0\:%1$s
+EMS020005=\u5408\u4F5C\u673A\u6784[%1s]\u4E0D\u5B58\u5728
  
 
 #\u4f1a\u5458\uff08\u4fe1\u606f\uff09\u6a21\u5757
-EMSIF0001=\u975e\u6cd5\u7684\u4f1a\u5458\u6570\u636e\uff08\u9519\u8bef\:%1$s\uff09
-EMSIF0002=\u6ce8\u518c\u4f1a\u5458\u65f6\u53d1\u751f\u9519\u8bef\uff08\u9519\u8bef\:%1$s\uff09
-EMSIF0003=\u6ce8\u518c\u4f1a\u5458\u4e1a\u52a1\u8d26\u6237\u65f6\u53d1\u751f\u9519\u8bef\uff08\u9519\u8bef\:%1$s\uff09
-EMSIF0004=\u6570\u636e\u6821\u9a8c\u65f6\u53d1\u751f\u9519\u8bef\uff08\u9519\u8bef\:%1$s\uff09
-EMSIF0005=\u767b\u9646\u65f6\u53d1\u751f\u9519\u8bef\uff08\u9519\u8bef\:%1$s\uff09
-EMSIF0006=\u83b7\u53d6\u8d26\u6237\u65f6\u53d1\u751f\u9519\u8bef\uff08\u9519\u8bef\:%1$s\uff09
-EMSIF0007=\u89e3\u7ed1\u94f6\u884c\u5361\u65f6\u53d1\u751f\u9519\u8bef\uff08\u9519\u8bef\:%1$s\uff09
+EMSIF0001=\u975E\u6CD5\u7684\u4F1A\u5458\u6570\u636E\uFF08\u9519\u8BEF\:%1$s\uFF09
+EMSIF0002=\u6CE8\u518C\u4F1A\u5458\u65F6\u53D1\u751F\u9519\u8BEF\uFF08\u9519\u8BEF\:%1$s\uFF09
+EMSIF0003=\u6CE8\u518C\u4F1A\u5458\u4E1A\u52A1\u8D26\u6237\u65F6\u53D1\u751F\u9519\u8BEF\uFF08\u9519\u8BEF\:%1$s\uFF09
+EMSIF0004=\u6570\u636E\u6821\u9A8C\u65F6\u53D1\u751F\u9519\u8BEF\uFF08\u9519\u8BEF\:%1$s\uFF09
+EMSIF0005=\u767B\u9646\u65F6\u53D1\u751F\u9519\u8BEF\uFF08\u9519\u8BEF\:%1$s\uFF09
+EMSIF0006=\u83B7\u53D6\u8D26\u6237\u65F6\u53D1\u751F\u9519\u8BEF\uFF08\u9519\u8BEF\:%1$s\uFF09
+EMSIF0007=\u89E3\u7ED1\u94F6\u884C\u5361\u65F6\u53D1\u751F\u9519\u8BEF\uFF08\u9519\u8BEF\:%1$s\uFF09
