--- a/zplatform-acc/pom.xml
+++ b/zplatform-acc/pom.xml
@@ -48,6 +48,17 @@
 			<artifactId>zplatform-commons-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.2.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope> 
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
