--- a/zplatform-specification/pom.xml
+++ b/zplatform-specification/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.zlebank.zplatform</groupId>
 		<artifactId>zplatform-infranstructure-deploy</artifactId>
-		<version>1.4.1-SNAPSHOT</version>
+		<version>1.4.1</version>
 		<relativePath>../zplatform-infranstructure-deploy/pom.xml</relativePath>
 	</parent>
 	<artifactId>zplatform-specification</artifactId>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>com.zlebank.zplatform</groupId>
 			<artifactId>zplatform-member</artifactId>
-			<version>1.4.1-SNAPSHOT</version>
+			<version>1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
