--- a/zplatform-member/pom.xml
+++ b/zplatform-member/pom.xml
@@ -19,5 +19,11 @@
 			<artifactId>zplatform-commons-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope> 
+		</dependency>
 	</dependencies>
 </project>
