--- a/zplatform-infranstructure-deploy/pom.xml
+++ b/zplatform-infranstructure-deploy/pom.xml
@@ -120,7 +120,7 @@
 			<dependency>
 				<groupId>com.zlebank.zplatform</groupId>
 				<artifactId>zplatform-commons-test</artifactId>
-				<version>1.0.0-SNAPSHOT</version>
+				<version>1.0.0</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
