--- a/zplatform-infranstructure-deploy/pom.xml
+++ b/zplatform-infranstructure-deploy/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.zlebank.zplatform</groupId>
 	<artifactId>zplatform-infranstructure-deploy</artifactId>
-	<version>1.6.0-SNAPSHOT</version>
+	<version>1.5.3</version>
 	<packaging>pom</packaging>
 	<name>zplatform-infranstructure-deploy</name>
 	<url>http://www.zlebank.com/</url>
