--- a/zplatform-acc/pom.xml
+++ b/zplatform-acc/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>com.zlebank.zplatform</groupId>
 			<artifactId>zplatform-member-api</artifactId>
-			<version>1.4.1</version>
+			<version>1.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cheffo</groupId>
