Signed-off-by: houyong <houyong@zlebank.com>

--- a/zplatform-infranstructure-deploy/pom.xml
+++ b/zplatform-infranstructure-deploy/pom.xml
@@ -303,5 +303,6 @@
 		<module>../zplatform-member</module>
 		<module>../zplatform-member-api</module>
 		<module>../zplatform-specification</module>
+		<module>../zplatform-acc-service</module>
 	</modules>
 </project>
