--- a/zplatform-member/pom.xml
+++ b/zplatform-member/pom.xml
@@ -25,5 +25,10 @@
 			<version>2.5</version>
 			<scope>provided</scope> 
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${springframework.version}</version>
+		</dependency>
 	</dependencies>
 </project>
